--- a/index.html
+++ b/index.html
@@ -18,15 +18,7 @@
             <ul class="nav">
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Sign In</a></li>
-                <li><a href="#" class="nav1">Sign Up</a>
-                    <div class="sub">
-                        <ul>
-                            <li><a href="#">As a College</a></li>
-                            <br>
-                            <li><a href="#">As a Student</a></li>
-                        </ul>
-                    </div>
-                </li>
+                <li><a href="#" class="nav1">Sign Up</a></li>
             </ul>
         </div>
     </header>
