--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    
     <title>Event-O</title>
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="containerz">
             <div class="logo">
                 <img src="./img/logo.png" alt="evento">
             </div>
@@ -23,11 +25,41 @@
         </div>
     </header>
     <div class="detail">
-        <h1>Events</h1>
+        <h1>All About Events</h1>
     </div>
     <div class="comt">
-        <h3>Upcoming Events</h3>
+        <h2>Upcoming Events</h2>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="e1">
+                    <h1>Event Name 1</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <button type="submit" >Participate Now</button>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="e2">
+                    <h1>Event Name 2</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <button type="submit">Participate Now</button>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="e3">
+                    <h1>Event Name 3</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <button type="submit">Participate Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>Created by: <b>DAKSHA</b></p>
+        <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+    </footer>
 </body>
 
 </html>
