--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <footer>
         <p>Created by: <b>DAKSHA</b></p>
-        <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+        <p>Contact information: <a href="mailto:anandmaya48@gmail.com">anandmaya48@gmail.com</a>.</p>
     </footer>
 </body>
 
